--- a/web/client/stylus/base.styl
+++ b/web/client/stylus/base.styl
@@ -10,13 +10,14 @@
   padding 0px
 
 body
-  font-family sans-serif
+  font-family Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif
   font-size 12px
 
 input[type="text"]
   border 1px solid input-border
+  font-family inherit
   font-size 14px
-  padding 6px 3px
+  padding 0px 3px
   &.error
     box-shadow inset 0px 0px 4px darken(red, 20%)
 
