--- a/web/client/stylus/index.styl
+++ b/web/client/stylus/index.styl
@@ -105,6 +105,7 @@ input.stats-filter-input
   box-sizing border-box
   height 100%
   font-size 12px
+  padding 0px 3px
   width 100%
 
 // Settings bar.
