hotkey ui width fix

--- a/web/client/stylus/views/keybindings-dialog.styl
+++ b/web/client/stylus/views/keybindings-dialog.styl
@@ -8,9 +8,14 @@
 key-width = 46px
 key-pad   = 6px
 
+group-width = 204px
+
 .hotkey-group
   float left
-  width 204px
+  width group-width
+
+.hotkey-hr
+  width group-width * 3
 
 .hotkey-category
   color #444
