--- a/template/index.html
+++ b/template/index.html
@@ -27,35 +27,23 @@
 
       <div class="features">
         <div class="feature-row">
-          <div class="feature"><a class="feature-link" href="#graph-types"><img src="images/snaps/histogram.png" alt="Plot counters and histograms"/><p class="feature-label">Plot counters and histograms</p></a></div>
-          <div class="feature"><a class="feature-link" href="#dashboards"><img src="images/snaps/dashboard.png" alt="Dashboards"/><p class="feature-label">Dashboards</p></a></div>
-          <div class="feature"><a class="feature-link" href="#intervals"><img src="images/snaps/live.png" alt="Real-time metrics"/><p class="feature-label">Real-time metrics</p></a></div>
+          {{ feature("images/snaps/histogram.png", "Plot counters and histograms", "#graph-types") }}
+          {{ feature("images/snaps/dashboard.png", "Dashboards", "#dashboards") }}
+          {{ feature("images/snaps/live.png", "Real-time metrics", "#intervals") }}
         </div>
         <div class="feature-row">
-          <div class="feature"><a class="feature-link" href="#histogram"><img src="images/snaps/heat-map.png" alt="Heat maps"/><p class="feature-label">Heat maps</p></a></div>
-          <div class="feature"><a class="feature-link" href="#tags"><img src="images/snaps/tags.png" alt="Tag events"/><p class="feature-label">Tag events</p></a></div>
-          <div class="feature"><a class="feature-link" href="#metrics-keys"><img src="images/snaps/tree-expanded.png" alt="Navigate thousands of keys"/><p class="feature-label">Navigate thousands of keys</p></a></div>
+          {{ feature("images/snaps/heat-map.png", "Heat maps", "#histogram") }}
+          {{ feature("images/snaps/tags.png", "Tag events", "#tags") }}
+          {{ feature("images/snaps/tree-expanded.png", "Navigate thousands of keys", "#metrics-keys") }}
         </div>
       </div>
 
       <div class="documentation">
         <h3 id="setup">Setup</h3>
-        <ol>
-<li>Set up a Postgres database.</li>
-<li>Run the setup script in <a href="https://github.com/Voxer/zag/tree/master/backend-pg"><code>zag-backend-pg</code></a>.
-This will create the tables and indices.</li>
-<li>Setup some <a href="https://github.com/Voxer/zag/tree/master/daemon"><code>zag-daemon</code></a> processes.
-The daemons are responsible for aggregating and monitoring the metrics and
-saving them to the database.</li>
-<li>Setup a <a href="https://github.com/Voxer/zag/tree/master/web"><code>zag-web</code></a> process. <a href="https://github.com/Voxer/zag/tree/master/web"><code>zag-web</code></a> handles data visualization
-and manages ancillary data such as tags and dashboards.</li>
-<li>Start sending data to the daemons using <a href="https://github.com/Voxer/zag/tree/master/agent"><code>zag-agent</code></a> in your application.</li>
-<li>Explore the data in <a href="https://github.com/Voxer/zag/tree/master/web"><code>zag-web</code></a>&#39;s interface.</li>
-</ol>
-
+        {body}
         <h3 id="zooming-and-panning">Zooming and panning</h3>
 
-        <div class="feature"><img src="images/gifs/zoom-revert-2.gif" alt="Zoom, zoom, revert, revert"/><p class="feature-label">Zoom, zoom, revert, revert</p></div>
+        {{ feature("images/gifs/zoom-revert-2.gif", "Zoom, zoom, revert, revert") }}
         <div class="col-1">
           <p>
             To zoom a graph in the X or Y direction, just click and drag a range.
@@ -63,18 +51,18 @@ and manages ancillary data such as tags and dashboards.</li>
           </p>
           <p>To pan a graph up and down or side-to-side, shift-click and drag.</p>
         </div>
-        <div class="feature"><img src="images/gifs/pan-zoom-pan-1.gif" alt="Zooming and panning"/><p class="feature-label">Zooming and panning</p></div>
+        {{ feature("images/gifs/pan-zoom-pan-1.gif", "Zooming and panning") }}
 
         <h3 id="graph-types">Graph types</h3>
 
-        <div class="feature"><img src="images/snaps/counter-2.png" alt="Counter"/><p class="feature-label">Counter</p></div>
+        {{ feature("images/snaps/counter-2.png", "Counter") }}
         <div class="col-1">
           <h4 id="counter">Counter</h4>
           <p>A counter measures the number of events over an interval.</p>
         </div>
-        <div class="feature"><img src="images/snaps/stack.png" alt="Stack"/><p class="feature-label">Stack</p></div>
+        {{ feature("images/snaps/stack.png", "Stack") }}
 
-        <div class="feature"><img src="images/snaps/histogram-subkeys.png" alt="Histogram subkeys"/><p class="feature-label">Histogram subkeys</p></div>
+        {{ feature("images/snaps/histogram-subkeys.png", "Histogram subkeys") }}
         <div class="col-1">
           <h4 id="histogram">Histogram</h4>
           <p>A histogram measures the distribution of a value. Fields measured:</p>
@@ -88,7 +76,7 @@ and manages ancillary data such as tags and dashboards.</li>
             <li><code>llquantize</code> - Log/linear quantile data for heat maps</li>
           </ul>
         </div>
-        <div class="feature"><img src="images/gifs/heat-map-zoom-1.gif" alt="Zooming a heat map"/><p class="feature-label">Zooming a heat map</p></div>
+        {{ feature("images/gifs/heat-map-zoom-1.gif", "Zooming a heat map") }}
 
         <h3 id="metrics-keys">Metrics keys</h3>
 
@@ -105,25 +93,25 @@ and manages ancillary data such as tags and dashboards.</li>
           </p>
           <p>In <code>A&gt;B</code>, A has no points associated with it, it is just a scope in the tree widget.</p>
         </div>
-        <div class="feature"><img src="images/snaps/tree-expanded.png" alt="Navigate thousands of keys"/><p class="feature-label">Navigate thousands of keys</p></div>
+        {{ feature("images/snaps/tree-expanded.png", "Navigate thousands of keys") }}
 
-        <div class="feature"><img src="images/gifs/key-tree-toggle-2.gif" alt="Expand/collapse key tree"/><p class="feature-label">Expand/collapse key tree</p></div>
+        {{ feature("images/gifs/key-tree-toggle-2.gif", "Expand/collapse key tree") }}
         <div class="col-1">
           <h4 id="key-tree">Key tree</h4>
           <p>Clicking on a triangle expands/collapses the keys.</p>
           <p>Shift-clicking on a triangle graphs all of the key's children.</p>
         </div>
-        <div class="feature"><img src="images/gifs/key-tree-bulk-overlay-1.gif" alt="Overlay keys"/><p class="feature-label">Overlay keys</p></div>
+        {{ feature("images/gifs/key-tree-bulk-overlay-1.gif", "Overlay keys") }}
 
-        <div class="feature"><img src="images/gifs/change-subkey-2.gif" alt="Overlay by subkey"/><p class="feature-label">Overlay by subkey</p></div>
+        {{ feature("images/gifs/change-subkey-2.gif", "Overlay by subkey") }}
         <div class="col-1">
           <p>Shift-click on a leaf to overlay it on the current graph.</p>
         </div>
-        <div class="feature"><img src="images/gifs/key-tree-filter-1.gif" alt="Filter keys"/><p class="feature-label">Filter keys</p></div>
+        {{ feature("images/gifs/key-tree-filter-1.gif", "Filter keys") }}
 
         <h3 id="intervals">Intervals</h3>
 
-        <div class="feature"><img src="images/gifs/interval-links-1.gif" alt="Change interval"/><p class="feature-label">Change interval</p></div>
+        {{ feature("images/gifs/interval-links-1.gif", "Change interval") }}
         <div class="col-1">
           <p>
             By default, the interval is relative, e.g. if the last 6 hours are plotted
@@ -132,11 +120,11 @@ and manages ancillary data such as tags and dashboards.</li>
           </p>
           <p>Intervals selected from the "minutes" row of the range selector will be live.</p>
         </div>
-        <div class="feature"><img src="images/gifs/interval-live-1.gif" alt="Live sub-second metrics"/><p class="feature-label">Live sub-second metrics</p></div>
+        {{ feature("images/gifs/interval-live-1.gif", "Live sub-second metrics") }}
 
         <h3 id="deltas">Deltas</h3>
 
-        <div class="feature"><img src="images/gifs/delta-override-2.gif" alt="Set the downsample interval manually"/><p class="feature-label">Set the downsample interval manually</p></div>
+        {{ feature("images/gifs/delta-override-2.gif", "Set the downsample interval manually") }}
         <div class="col-1">
           <p>A "delta" is the point's downsample interval.</p>
           <p>
@@ -148,11 +136,11 @@ and manages ancillary data such as tags and dashboards.</li>
 
         <h3 id="dashboards">Dashboards</h3>
 
-        <div class="feature"><img src="images/snaps/dashboard.png" alt="A basic dashboard"/><p class="feature-label">A basic dashboard</p></div>
+        {{ feature("images/snaps/dashboard.png", "A basic dashboard") }}
         <div class="col-1">
           <p>Use dashboards to get a bird's-eye view of related graphs.</p>
         </div>
-        <div class="feature"><img src="images/snaps/dashboard-menu.png" alt="Select a dashboard"/><p class="feature-label">Select a dashboard</p></div>
+        {{ feature("images/snaps/dashboard-menu.png", "Select a dashboard") }}
 
         <h3 id="tags">Tags</h3>
 
@@ -169,9 +157,9 @@ and manages ancillary data such as tags and dashboards.</li>
             <li><code>color</code> - A hex color, e.g. <code>#f00</code>.</li>
           </ul>
         </div>
-        <div class="feature"><img src="images/snaps/tags.png" alt="Tags"/><p class="feature-label">Tags</p></div>
+        {{ feature("images/snaps/tags.png", "Tags") }}
 
-        <div class="feature"><img src="images/snaps/tag-new.png" alt="New tag"/><p class="feature-label">New tag</p></div>
+        {{ feature("images/snaps/tag-new.png", "New tag") }}
         <div class="col-2">
           <p>To start using tags, you need to create some 'tagtypes' using the admin script:</p>
         <code><pre>
