--- a/template/index.styl
+++ b/template/index.styl
@@ -8,11 +8,13 @@ user-drag(val)
   margin 0px
   padding 0px
 
+text-color = #222
+
 body
   background white
-  color #222
+  color text-color
   font-family Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif
-  font-size 12px
+  font-size 14px
 
 ::selection
   background #444
@@ -60,21 +62,60 @@ feature-width  = 300px
 
 ////////////////////////////////////////
 
-frame-bg = #f4f4f4
+frame-bg     = #f4f4f4
+frame-border = darken(frame-bg, 10%)
+frame-shadow = 0px 1px 1px rgba(black, 0.4)
 
 .feature
   background frame-bg
-  box-shadow 0px 1px 1px rgba(black, 0.4)
+  box-shadow frame-shadow
   float left
   margin-bottom 20px
   margin 0px 10px 20px
   padding 2px
   > img
-    border 1px solid darken(frame-bg, 10%)
+    border 1px solid frame-border
     height feature-height
     user-drag none
     width feature-width
-  > p
-    font-size 12px
-    text-align center
 
+.feature-link, .feature-label
+  color text-color
+  font-size 12px
+  margin 0px
+  text-align center
+  text-decoration none
+
+
+////////////////////////////////////////////////////////////////////////////////
+
+h3, h4
+  clear both
+  text-align center
+
+h3
+  background frame-bg
+  border 1px solid frame-border
+  box-shadow frame-shadow
+  font-size 18px
+  margin 10px
+  padding 10px 0px
+
+p
+  margin 12px 0px
+  line-height 17px
+
+ul, ol
+  margin-left 22px
+
+
+.col-1, .col-2, .col-3
+  float left
+  height 246px
+
+.col-1
+  width 33.33%
+.col-2
+  width 66.66%
+.col-3
+  width 100%
