--- a/template/index.styl
+++ b/template/index.styl
@@ -64,20 +64,15 @@ feature-width  = 300px
 
 frame-bg     = #f4f4f4
 frame-border = darken(frame-bg, 10%)
-frame-shadow = 0px 1px 1px rgba(black, 0.4)
+frame-margin = 10px
 
 .feature
   background frame-bg
-  box-shadow frame-shadow
+  box-shadow 0px 0px 0px 1px frame-border
   float left
-  margin-bottom 20px
-  margin 0px 10px 20px
+  margin 0px frame-margin 20px
   padding 2px
-  > img
-    border 1px solid frame-border
-    height feature-height
-    user-drag none
-    width feature-width
+  position relative
 
 .feature-link, .feature-label
   color text-color
@@ -86,8 +81,37 @@ frame-shadow = 0px 1px 1px rgba(black, 0.4)
   text-align center
   text-decoration none
 
+// The actual image, a png or gif.
+.feature-image
+  border 1px solid frame-border
+  height feature-height
+  user-drag none
+  width feature-width
+
+// Overlay over a feature's img when it is animatable but paused.
+.feature-play-gif
+  absolute top 3px left 3px
+  background rgba(black, 0.15)
+  border none
+  box-shadow none
+  color rgba(black, 0.7)
+  cursor pointer
+  font-size 40px
+  height feature-height
+  outline none
+  width feature-width
+  &:hover
+    color rgba(black, 0.85)
+
+.feature-gif > .feature-play-gif
+  background transparent
+  color transparent
 
 ////////////////////////////////////////////////////////////////////////////////
+
+.documentation-setup
+  margin 0px auto
+  width 600px
 
 h3, h4
   clear both
@@ -96,17 +120,23 @@ h3, h4
 h3
   background frame-bg
   border 1px solid frame-border
-  box-shadow frame-shadow
   font-size 18px
-  margin 10px
+  font-weight normal
+  margin frame-margin
   padding 10px 0px
 
 p
-  margin 12px 0px
+  margin 12px frame-margin
   line-height 17px
 
+pre
+  background #f8f8f8
+  border 1px solid #ddd
+  margin 0px (frame-margin + 16px)
+  padding 2px
+
 ul, ol
-  margin-left 22px
+  margin-left 28px
 
 
 .col-1, .col-2, .col-3
