setup vs set up

--- a/template/index.html
+++ b/template/index.html
@@ -128,6 +128,10 @@
           <h4 id="key-tree">Key tree</h4>
           <p>Clicking on a triangle expands/collapses the keys.</p>
           <p>Shift-clicking on a triangle graphs all of the key's children.</p>
+          <p>
+            To create a new key, just start sending it data. Within 2 minutes of receiving the first
+            data point, the key will appear in the tree.
+          </p>
         </div>
         {{ feature("images/gifs/key-tree-bulk-overlay-1.gif", "Overlay keys") }}
 
