--- a/web/client/stylus/index.styl
+++ b/web/client/stylus/index.styl
@@ -98,7 +98,7 @@
   right 0px
   padding 2px
   width sidebar-width
-  z-index 2
+  z-index z-filter
 // Filter box
 filter-margin = 2px
 input.stats-filter-input
@@ -125,7 +125,7 @@ input.stats-filter-input
   position absolute
   top 0px
   // Keep the popups over the plot outlines.
-  z-index 5
+  z-index z-settings
   > .setting
     border-width 0px
 
