--- a/web/client/stylus/mixins.styl
+++ b/web/client/stylus/mixins.styl
@@ -32,3 +32,14 @@ header-border = #ccc
 header-height = 30px
 sidebar-width = 250px
 function-form-height = header-height
+
+z-chart-date-label  = 1
+z-chart-tags        = 2
+z-chart-value-label = 3
+z-filter            = 3
+z-spinner           = 4
+z-setting-popup     = 5
+z-settings          = 6
+z-input-suggester   = 6
+z-menu-tree         = 6
+z-dialog            = 50
