--- a/web/client/stylus/views/input-suggester.styl
+++ b/web/client/stylus/views/input-suggester.styl
@@ -16,7 +16,7 @@
   position absolute
   // Offset for the input border.
   transform translateY(1px)
-  z-index 5
+  z-index z-input-suggester
   scrollbars()
 
 // LI
