--- a/web/client/stylus/views/menu-tree.styl
+++ b/web/client/stylus/views/menu-tree.styl
@@ -10,7 +10,7 @@ menu-bg = header-bg
   list-style none
   position absolute
   user-select none
-  z-index 5
+  z-index z-menu-tree
 
 // LI
 //.menu-leaf
