--- a/web/client/stylus/views/settings/index.styl
+++ b/web/client/stylus/views/settings/index.styl
@@ -37,7 +37,7 @@
 .setting-popup, .setting-menu
   position absolute
   top (header-height + 1px)
-  z-index 4
+  z-index z-setting-popup
 
 .setting-popup
   background header-bg
