--- a/web/client/stylus/views/spinner.styl
+++ b/web/client/stylus/views/spinner.styl
@@ -30,6 +30,7 @@ loader-min = 15%
   opacity 0.6
   pointer-events none
   transform translate(-50%, -50%) rotate(180deg)
+  z-index z-spinner
 
 // A single bar. There are 4 total.
 .loader-bar
