--- a/web/client/stylus/views/dialog.styl
+++ b/web/client/stylus/views/dialog.styl
@@ -12,7 +12,7 @@ dialog-side-padding = 20px
   fixed top 50% left 50%
   padding 50px dialog-side-padding 14px
   transform translate(-50%, -50%)
-  z-index 50
+  z-index z-dialog
 
 // Header container.
 .dialog-header
